--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,6 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ index.fcgi/$1 [QSA,L]
 
-RewriteCond %{HTTP:Authorization} ^(.+)
-RewriteRule ^(.*)$ $1 [E=HTTP_AUTHORIZATION:%1,PT]
+AuthType SSLCert
+Require valid-user
+ErrorDocument 401 /__scripts/needcerts
